# tektra

./: .coverage  .env  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CLEANUP_SUMMARY.md  COMMERCIAL-LICENSE-TERMS.md  CONTRIBUTORS.md  CONVERSATIONAL_GUIDE.md  CROSS_PLATFORM_SUPPORT.md  Cargo.toml  DEPENDENCY_ANALYSIS.md  DISTRIBUTION_GUIDE.md  DXT_README.md  Dockerfile  FINAL_INTEGRATION_SUMMARY.md  GGUF_STATUS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LICENSE-AGPL-3.0  LICENSE-APACHE  LICENSE-COMMERCIAL  LICENSE-FAQ.md  LICENSING.md  MLX_ENABLED.md  MLX_INTEGRATION.md  MULTIMODAL_BACKEND_STATUS.md  MULTIMODAL_GUIDE.md  MULTIMODAL_IMPLEMENTATION_SUMMARY.md  MULTIMODAL_MIGRATION_GUIDE.md  Makefile  NEW_ARCHITECTURE_README.md  PANIC_FIX_SUMMARY.md  PHASE1_BIOMETRIC_SECURITY_SUMMARY.md  PHASE2_AVATAR_ENHANCEMENT_SUMMARY.md  PHASE_3_1_SUMMARY.md  PLACEHOLDER_REPORT.md  PUBLISHING_GUIDE.md  README-DEV.md  (+72 more)
.cargo/: config.toml
backend/: README.md  pyproject.toml  tektra.db  test_db.py  test_websocket.py
backend/app/: config.py  database.py  main.py
backend/app/routers/: ai.py  websocket.py
backend/app/services/: ai_service.py
backend/tektra/: __init__.py  cli.py  server.py  setup.py
backend/tektra.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
backend/tektra/app/: config.py  database.py  dependencies.py  main.py
backend/tektra/app/models/: __init__.py  conversation.py  user.py  user_preferences.py
backend/tektra/app/routers/: ai.py  audio.py  avatar.py  camera.py  conversations.py  conversations_enhanced.py  models.py  preferences.py  robot.py  security.py  websocket.py
backend/tektra/app/security/: __init__.py  anonymization.py  biometric_auth.py  key_derivation.py  vault_manager.py
backend/tektra/app/services/: ai_service.py  auto_installer.py  conversation_search_service.py  conversation_service.py  language_service.py  lip_sync_service.py  model_manager.py  phi4_service.py  preferences_service.py  security_service.py  tts_service.py  vad_service.py  whisper_service.py
backend/tektra/frontend/: 404.html  index.html  index.txt
backend/tektra_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
dist-bundle/: Install Tektra.command  README.txt
docker/: README.md  backend.Dockerfile  docker-compose.yml  entrypoint.sh  frontend.Dockerfile  healthcheck.sh  init.sql
docs/: API_REFERENCE.md  ARCHITECTURE.md  PERFORMANCE_GUIDE.md  PRODUCTION_DEPLOYMENT.md  README.md  SECURITY_GUIDE.md  TROUBLESHOOTING.md
dxt-extension/: DEVELOPMENT_SUMMARY.md  README.md  install.sh  manifest.json  tektra-voice-ai.dxt
frontend/: package-lock.json  package.json  tektra.db
scripts/: deploy.sh  dev.py  scale.sh
src/: App.css  App.tsx  AvatarTestApp.tsx  BuildUpApp.tsx  CompleteApp.tsx  ComponentTestApp.tsx  FullApp.tsx  ProgressiveApp.tsx  QueryTestApp.tsx  SimpleApp.tsx  StoreTestApp.tsx  TestApp.tsx  TestMarkdown.tsx  ThreeTestApp.tsx  UltraMinimalApp.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  E2E_TESTING.md  Info.plist  LICENSE-APACHE  README.md  TESTING_GUIDE.md  build.rs  build_output.txt  entitlements.plist  mlx_bridge.py  models.toml  run_tests.sh  tauri.conf.json  test_multimodal.rs
src-tauri/models/: config.toml
src-tauri/src/: cli.rs  config.rs  lib.rs  main.rs  main.rs.backup  main_backup.rs  main_new.rs  main_standalone.rs  main_updated.rs  standalone.rs  state_standalone.rs  test_mlx_integration.rs  types.rs  vector_db.rs
src-tauri/src/ai/: document_processor.rs  download.rs  embeddings.rs  gemma3n.rs  gguf_inference.rs  inference_backend.rs  inference_manager.rs  input_pipeline.rs  llama_inference.rs  mcp_server.rs  mlx_inference.rs  mod.rs  model_config_loader.rs  multimodal_processor.rs  ollama_inference.rs  speech_processor.rs  tektra_integration.rs  template_manager.rs  tinyllama_v2.rs  unified_model_manager.rs  whisper.rs
src-tauri/src/ai/backends/: enhanced_ollama_backend.rs  llama_cpp_backend.rs  mistral_rs_backend.rs  mod.rs
src-tauri/src/ai/tests/: backend_tests.rs  mod.rs  model_config_loader_tests.rs  template_manager_tests.rs  unified_model_manager_tests.rs
src-tauri/src/audio/: conversation_manager.rs  mod.rs  real_audio.rs  tts.rs
src-tauri/src/avatar/: mod.rs
src-tauri/src/conversation/: context_manager.rs  conversation_flow.rs  enhanced_manager.rs  intelligent_orchestrator.rs  memory_store.rs  mod.rs  persona_manager.rs  prompt_templates.rs
src-tauri/src/database/: mod.rs
src-tauri/src/inference/: candle_backend.rs  huggingface.rs  mistralrs_backend.rs  mod.rs  model_abstraction.rs  model_registry.rs  quantization.rs  qwen_omni.rs  streaming.rs  token_estimator.rs
src-tauri/src/mcp/: capabilities.rs  mod.rs  server.rs  tools.rs  transport.rs
src-tauri/src/multimodal/: audio_processor.rs  document_processor.rs  enhanced_audio_processor.rs  enhanced_processor.rs  enhanced_vision.rs  input_pipeline.rs  mod.rs  output_formatter.rs  speech_synthesizer.rs  thinker_talker_processor.rs  unified_interface.rs  video_processor.rs  vision_processor.rs
src-tauri/src/robot/: mod.rs
src-tauri/src/state/: mod.rs
src-tauri/src/tests/: mod.rs  new_architecture_test.rs
src-tauri/src/vision/: feature_extraction.rs  mod.rs  multimodal_fusion.rs  preprocessing.rs
src-tauri/src/voice/: mod.rs  realtime_audio.rs  rust_backend_server.rs  unmute_client.rs  unmute_service_manager.rs  voice_pipeline.rs
src-tauri/test_data/audio/: command.aiff  generate_test_audio.sh  question.aiff  test_speech.aiff
src-tauri/test_data/documents/: data.json  sample.txt  technical_spec.md
src-tauri/test_data/images/: generate_test_image.py  test_image_placeholder.txt
src-tauri/tests/: app_integration_test.rs  bundled_ollama_test.rs  document_query_integration_tests.rs  live_model_test.rs  multimodal_input_tests.rs  multimodal_integration_tests.rs  multimodal_ollama_test.rs  multimodal_with_real_files_test.rs  ollama_model_loading_tests.rs
test-user-install/: hello.py  pyproject.toml
tests/: __init__.py  conftest.py  test_agent_creation.py  test_agent_memory.py  test_agent_memory_simple.py  test_animation_foundation.py  test_memory_manager.py  (+24 more)
(+630 files in other folders)
