[package]
name = "project-tektra"
version = "0.1.0"
description = "Project Tektra - AI Voice Assistant"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [ "fs-read-dir", "fs-rename-file", "fs-write-file", "fs-read-file", "http-all", "dialog-ask", "fs-copy-file", "notification-all", "dialog-open", "dialog-save", "fs-create-dir", "fs-exists", "dialog-confirm", "fs-remove-dir", "shell-open", "dialog-message", "fs-remove-file", "custom-protocol"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "project-tektra"
path = "src/main.rs"
