[project]
name = "tektra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "huggingface-hub>=0.29.3",
    "mistral-common>=1.5.4",
    "vllm>=0.8.2",
    "sounddevice>=0.4.6",
    "simpleaudio>=1.0.4",
    "opencv-python>=4.7.0",
    "transformers @ git+https://github.com/huggingface/transformers.git",
    "peft>=0.5.0",
    "torchaudio>=2.0.0",
    "numpy>=1.23.0",
    "torch>=2.0.0",
    "accelerate>=0.20.0",
    "safetensors>=0.3.1",
]
